Register KMyMoney with process ID

BUG:350850
FIXED-IN:5.0.1